# rust-bootcamp

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  README.md
01-rust-cli/: CONTRIBUTING.md  index.html
01-rust-cli/src/: lib.rs  main.rs
01-rust-cli/src/cli/: http.rs  mod.rs  opts.rs
03-macros/src/: main.rs  myvec.rs
04-rust-ecosystem/: Cargo.toml  README.md
04-rust-ecosystem/examples/: axum_serde.rs  axum_tracing.rs  builder.rs  enum.rs  err.rs  more.rs  serde.rs  serde1.rs
04-rust-ecosystem/src/: error.rs
05-rust-chat/: .env  CONTRIBUTING.md  Cargo.toml  README.md
05-rust-chat/chat_server/: Cargo.toml
05-rust-chat/chat_server/src/: config.rs  error.rs  lib.rs  main.rs
05-rust-chat/chat_server/src/handlers/: messages.rs  mod.rs
05-rust-chat/chat_server/src/models/: mod.rs  user.rs
05-rust-chat/chat_server/src/utils/: jwt.rs
05-rust-chat/migrations/: 20250806154246_init.sql
05-rust-chat/notify_server/: Cargo.toml  index.html
05-rust-chat/notify_server/src/: lib.rs  main.rs  sse.rs
05-rust-chat/sql/: init.sql
05-rust-chat/src/: config.rs  lib.rs  main.rs
05-rust-chat/src/handlers/: auth.rs  chat.rs
