[package]
name = "rust-ecosystem"
version = "0.1.0"
edition = "2021"
description = "rust ecosystem example"
repository = "https://github.com/will-we/rust-ecosystem"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-opentelemetry = "0.23.0"

[dev-dependencies]
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-attributes = "0.1"
tracing-appender = "0.2.3"